# tiny-compiler-learn

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  test.txt
.github/workflows/: Chapter01.yml  Chapter02.yml  Chapter03.yml  Chapter04.yml  Chapter05.yml  main.yml
Chapter00/asm/: fibonacciSeq.S  sum.S  sumMain.c
Chapter00/wasm/: fibonacciSequence.js  fibonacciSequence.wasm  fibonacciSequence.wat  sum.js  sum.wasm  sum.wat
Chapter01/: CMakeLists.txt  main.cpp
Chapter02/: CMakeLists.txt  local.0.wasm  local.0.wat  local.json  main.cpp  test.cpp
Chapter02/parser/: ModuleInfo.hpp  Stack.hpp  aarch64_assembler.cpp  aarch64_assembler.hpp  parser.cpp  parser.hpp
Chapter02/test/: local.wast
Chapter03/: CMakeLists.txt  arithmetic.json  test.cpp
Chapter03/parser/: OPCode.hpp  StackElement.hpp  aarch64_assembler.cpp  aarch64_assembler.hpp  parser.cpp  uitl.cpp  util.hpp
Chapter04/: div.json  test.cpp
Chapter04/parser/: aarch64_assembler.cpp  aarch64_assembler.hpp  aarch64_common.hpp  parser.cpp
Chapter04/test/: div.wast
Chapter05/: CMakeLists.txt  if.0.wasm  if.0.wat  if.json  test.cpp
Chapter05/parser/: ModuleInfo.hpp  StackElement.hpp  aarch64_assembler.cpp  aarch64_assembler.hpp  parser.cpp
